Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/machine_learning.css
+++ b/mcidashboard/mcidashboard-front/src/css/machine_learning.css
@@ -17,7 +17,7 @@
 }
 
 .ml-subtitle {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: 600;
 }
 
